linter + name consistency

--- a/minecraft.yml
+++ b/minecraft.yml
@@ -16,7 +16,7 @@
       minecraft_java_deb_repo: deb [signed-by=/usr/share/keyrings/corretto-keyring.gpg] https://apt.corretto.aws stable main
       minecraft_java_package: java-21-amazon-corretto-jdk
       minecraft_level_name: world
-      minecraft_properties_template: "{{ lookup('file', 'templates/server.properties.j2') }}"
+      minecraft_properties_template: templates/server.properties.j2
 
   tasks:
     - name: Set journald log size
