--- a/docker.yml
+++ b/docker.yml
@@ -9,10 +9,8 @@
   roles:
     - role: tychobrouwer.ssh
 
-    - role: tychobrouwer.portainer
-      traefik_root_domain: tbrouwer.com
+    - role: tychobrouwer.docker
       portainer_root_domain: tbrouwer.com
-      traefik_enabled: false
       portainer_cpus: 2
       portainer_dashy:
         description: "Dashboard | Tycho Brouwer"
@@ -24,14 +22,8 @@
         description: Passbolt | Tycho Brouwer
         user_surname: brouwer
         user_name: tycho
-      portainer_traefik_additional_volumes:
-        - /root/cert-proxmox.crt:/root/cert-proxmox.crt:ro
-        - /root/tbrouwer-cloudflare-origin.cert:/root/tbrouwer-cloudflare-origin.cert:ro
-        - /root/tbrouwer-cloudflare-origin.key:/root/tbrouwer-cloudflare-origin.key:ro
       portainer_authelia_config_template: templates/authelia-config.yml.j2
       portainer_dashy_config_template: templates/dashy-conf.yml.j2
-      portainer_traefik_dynamic_template: templates/traefik-dynamic.yml.j2
-      portainer_traefik_static_template: templates/traefik-static.yml.j2
 
   tasks:
     - name: Set journald log size
