--- a/prometheus.yml
+++ b/prometheus.yml
@@ -11,6 +11,7 @@
 
     - role: tychobrouwer.prometheus
       prometheus_template: templates/prometheus.yml.j2
+      prometheus_retention: 365d
       prometheus_pve_exporter: true
       prometheus_pve_user: ci@pve
       prometheus_pve_password: "{{ proxmox_ci_password }}"
