--- a/semaphore.yml
+++ b/semaphore.yml
@@ -13,14 +13,12 @@
     - role: tychobrouwer.postgres
       postgres_db_user: semaphore
       postgres_db_name: semaphoredb
-      postgres_db_pass: "{{ semaphore_db_password }}"
+      postgres_db_password: "{{ semaphore_db_password }}"
 
     - role: tychobrouwer.semaphore
-      semaphore_sonfig_template: templates/semaphore.json.j2
+      semaphore_config_template: templates/semaphore.json.j2
       semaphore_admin_login: admin
       semaphore_admin_name: Tycho Brouwer
-      semaphore_admin_password: "{{ semaphore_admin_password }}"
-      semaphore_admin_email: "{{ semaphore_admin_email }}"
 
   tasks:
     - name: Set journald log size
