remove ansible.cfg vault_pass_file

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -2,7 +2,7 @@
 INVENTORY = inventories/
 REMOTE_USER = root
 REMOTE_PORT = 22
-VAULT_PASSWORD_FILE = .vault_pass.txt
+# VAULT_PASSWORD_FILE = .vault_pass.txt
 FORKS = 10
 PIPELINING = True
 stdout_callback = yaml
