--- a/prometheus.yml
+++ b/prometheus.yml
@@ -20,9 +20,8 @@
 
 - name: Install Prometheus Node Exporter
   hosts:
-    - proxmox_lxc_running
+    - proxmox_accessable
     - pve
-    - docker
 
   vars_files:
     - vars.yml
