add requirements versions

--- a/roles/requirements.yml
+++ b/roles/requirements.yml
@@ -1,33 +1,64 @@
 ---
 roles:
   - name: tychobrouwer.ark_survival
+    version: v1.0.0
   - name: tychobrouwer.arrs
+    version: v1.0.0
   - name: tychobrouwer.dashboard
+    version: v1.0.0
   - name: tychobrouwer.docker
+    version: v1.0.0
   - name: tychobrouwer.factorio
+    version: v1.0.0
   - name: tychobrouwer.git
+    version: v1.0.0
   - name: tychobrouwer.gitea
+    version: v1.0.0
   - name: tychobrouwer.jellyfin
+    version: v1.0.0
   - name: tychobrouwer.kopia
+    version: v1.0.0
   - name: tychobrouwer.lighttpd
+    version: v1.0.0
   - name: tychobrouwer.lxc_mount
+    version: v1.0.0
   - name: tychobrouwer.lxc_nvidia
+    version: v1.0.0
   - name: tychobrouwer.lxc_start
+    version: v1.0.0
   - name: tychobrouwer.matlab
+    version: v1.0.0
   - name: tychobrouwer.minecraft
+    version: v1.0.0
   - name: tychobrouwer.node_exporter
+    version: v1.0.0
   - name: tychobrouwer.nordvpn
+    version: v1.0.0
   - name: tychobrouwer.pbs
+    version: v1.0.0
   - name: tychobrouwer.pihole
+    version: v1.0.0
   - name: tychobrouwer.postgres
+    version: v1.0.0
   - name: tychobrouwer.prometheus
+    version: v1.0.0
   - name: tychobrouwer.proxmox
+    version: v1.0.0
   - name: tychobrouwer.qbittorrent_nox
+    version: v1.0.0
   - name: tychobrouwer.samba
+    version: v1.0.0
   - name: tychobrouwer.semaphore
+    version: v1.0.0
   - name: tychobrouwer.ssh
+    version: v1.0.0
   - name: tychobrouwer.stirlingpdf
+    version: v1.0.0
   - name: tychobrouwer.traefik
+    version: v1.0.0
   - name: tychobrouwer.upgrade_packages
+    version: v1.0.0
   - name: tychobrouwer.wiki_js
+    version: v1.0.0
   - name: tychobrouwer.wireguard
+    version: v1.0.0
