--- a/traefik.yml
+++ b/traefik.yml
@@ -8,9 +8,9 @@
     - private-vars.yml
 
   roles:
-    - role: tychobrouwer.ssh
+    - role: ssh
 
-    - role: tychobrouwer.traefik
+    - role: traefik
       traefik_root_domain: tbrouwer.com
       traefik_dynamic_template: templates/traefik-dynamic.yml.j2
       traefik_static_template: templates/traefik-static.yml.j2
