--- a/matlab.yml
+++ b/matlab.yml
@@ -7,7 +7,7 @@
     - private-vars.yml
 
   roles:
-    - role: tychobrouwer.lxc_mount
+    - role: lxc_mount
       lxc_mount_is_lxc: false
       lxc_mount_mounts:
         - { src: /media/file-share/TUEindhoven, dest: /home/matlab/Documents/TUEindhoven }
@@ -22,16 +22,16 @@
     - private-vars.yml
 
   roles:
-    - role: tychobrouwer.ssh
+    - role: ssh
 
-    - role: tychobrouwer.matlab
+    - role: matlab
       matlab_install_location: /opt/matlab/R2024b
       matlab_user: matlab
       matlab_input_file: templates/matlab-input.txt
       matlab_working_directory: /home/matlab/Documents
       matlab_release: R2024b
 
-    - role: tychobrouwer.lxc_mount
+    - role: lxc_mount
       lxc_mount_is_lxc: true
       lxc_mount_mounts:
         - { src: /media/file-share/TUEindhoven, dest: /home/matlab/Documents/TUEindhoven }
