fix gitea admin creds

--- a/gitea.yml
+++ b/gitea.yml
@@ -18,6 +18,7 @@
 
     - role: gitea
       gitea_app_name: "Gitea | Tycho Brouwer"
+      gitea_admin_user: tychobrouwer
       gitea_db_user: gitea
       gitea_db_name: giteadb
 
