added mimir and minio to prometheus

--- a/prometheus.yml
+++ b/prometheus.yml
@@ -18,6 +18,7 @@
       prometheus_pve_exporter_port: 9221
       prometheus_pve_exporter_address: 127.0.0.1
       prometheus_mimir_template: templates/mimir.yml.j2
+      prometheus_minio_template: templates/minio.yml.j2
 
 - name: Install Prometheus Node Exporter
   hosts:
